[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
trdelnik-client = "0.1.6"
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"

[dev-dependencies.program_client]
path = "../.program_client"

[dev-dependencies.my_auction]
path = "../programs/my_auction"
