[package]
name = "my_auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.0"
anchor-spl = "0.24.0"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.5"