[package]
name = "my_auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"